assets/css/main.css
/* ... */
@media screen and (max-width: 736px) {
  #sidebar {
    display: none;
  }
}

/* Intro */

#intro {
  background-attachment: fixed;
  /* background-image: url("images/intro.svg"); */
  background-color: (255, 255, 255);
  background-position: top right;
  background-repeat: no-repeat;
  background-size: 100% 100%;
}

#intro p {
  font-size: 1.25em;
}

@media screen and (max-width: 980px) {
  #intro p br {
    display: none;
  }
}

@media screen and (max-width: 736px) {
  #intro p {
    font-size: 1em;
  }
}

@media screen and (max-width: 1280px) {
  #intro {
    background-attachment: scroll;
  }
}

.actions > li {
  margin: auto;
}

#intro-dropdowns-1,
#intro-dropdowns-2,
#intro-dropdowns-3,
#intro-dropdowns-4,
#intro-dropdowns-5,
#intro-dropdowns-6 {
  font-size: 22px;
  color: rgba(255, 255, 255, 0.75);
  margin-top: 10px;
}

#intro-dropdowns-1:hover,
#intro-dropdowns-2:hover,
#intro-dropdowns-3:hover,
#intro-dropdowns-4:hover,
#intro-dropdowns-5:hover,
#intro-dropdowns-6:hover {
  color: rgba(255, 255, 255, 0.9);
  cursor: pointer;
}

#intro-dropdowns-1-content {
  height: 90px;
  transition: height 600ms;
  overflow-x: hidden;
  margin-left: 20px;
}

#intro-dropdowns-5-content,
#intro-dropdowns-3-content {
  height: 120px;
  transition: height 700ms;
  overflow-x: hidden;
  margin-left: 20px;
}

#intro-dropdowns-2-content,
#intro-dropdowns-6-content {
  height: 130px;
  transition: height 900ms;
  overflow-x: hidden;
  margin-left: 20px;
}

#intro-dropdowns-4-content {
  height: 250px;
  transition: height 1000ms;
  overflow-x: hidden;
  margin-left: 20px;
}

::-webkit-scrollbar {
  display: none;
}

#intro-dropdowns-1-content.nonexpanded,
#intro-dropdowns-2-content.nonexpanded,
#intro-dropdowns-3-content.nonexpanded,
#intro-dropdowns-4-content.nonexpanded,
#intro-dropdowns-5-content.nonexpanded,
#intro-dropdowns-6-content.nonexpanded {
  height: 0px;
}

.face-pic {
  width: 200px;
  height: 200px;
}

.project-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.project-header > a {
  font-size: 35px;
}

.intro-dropdowns-indicators {
  color: transparent;
}

#intro-dropdowns-1:hover .intro-dropdowns-indicators,
#intro-dropdowns-2:hover .intro-dropdowns-indicators,
#intro-dropdowns-3:hover .intro-dropdowns-indicators,
#intro-dropdowns-4:hover .intro-dropdowns-indicators,
#intro-dropdowns-5:hover .intro-dropdowns-indicators,
#intro-dropdowns-6:hover .intro-dropdowns-indicators {
  color: inherit;
}

.intro-dropdowns-indicators.light {
  color: inherit;
}

/* #intro-dropdowns-1:not(.nonexpanded) .intro-dropdowns-indicators {
  color: inherit;
} */

.dropdown-expandar {
  margin-right: 5px;
}

.jameshernandez {
  margin-bottom: 0px;
}

.software-engineer {
  font-size: 25px;
  color: white;
}

.fa-angle-right.expanded {
  rotate: 90deg;
}

.intro-main-title-wrapper {
  display: flex;
  align-items: flex-end;
}

#features-react {
  color: #ffffff;
}

#features-react:hover {
  color: rgb(2, 237, 237);
}

